--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     <!-- Gallery -->
     <section class="section-c">
-        <div class="galerry">
+        <div class="gallery">
             <a href="https://i.ibb.co/CHLBZnp/gal2323.jpg" class="big"><img src="https://i.ibb.co/CHLBZnp/gal2323.jpg"
                     alt="" /></a>
             <a href="https://i.ibb.co/4pBbhfY/gal39834.jpg" class="big"><img src="https://i.ibb.co/4pBbhfY/gal39834.jpg"
